CSS fixes for alignment on Edit Post screen (#2678)
* #2533 CSS fix for Help alignment

* #2533 Fix for padding in RTL

* #2533 Fix for Preview Snippet box width

* #2533 CSS fixes for right alignment

* #2533 CSS fix for Help on Social Settigns tab

* #2533 CSS fix for Help alignment in RTL

--- a/css/modules/aioseop_module.css
+++ b/css/modules/aioseop_module.css
@@ -83,8 +83,12 @@
 
 .aioseop_tabs .aioseop_meta_box_help,
 .aioseop_tabs .aioseop_meta_box_help:active {
-	margin-top: 4px;
-	margin-right: 45px;
+	margin-top: 10px;
+}
+
+.aioseop_tabs #aioseop_opengraph_settings .aioseop_meta_box_help,
+.aioseop_tabs #aioseop_opengraph_settings .aioseop_meta_box_help:active {
+	margin-bottom: 20px;
 }
 
 .aioseop_label {
@@ -1402,6 +1406,7 @@ div.sfwd_debug_error {
 }
 
 .postbox-container .aioseop_input {
+	width: 100%;
 	margin-bottom: 10px;
 	padding: 0;
 }
@@ -1453,8 +1458,8 @@ div#aiosp_snippet_wrapper {
     border: 1px solid #8d96a0;
     clear: both;
     padding: 10px 10px 0;
-    max-width: 97%;
-    margin-bottom: 15px;
+    width: auto;
+    margin: 0 1px 15px;
 }
 
 #aiosp_snippet_wrapper > .aioseop_input:first-child {
